# feedjack

./: setup.cfg
feedjack/: admin.py  fjlib.py  models.py  urls.py  views.py
feedjack/management/commands/: feedjackupdate.py
